--- a/セクション3.ipynb
+++ b/セクション3.ipynb
@@ -144,7 +144,10 @@
     "])\n",
     "df=spark.read.option(\"multiLine\", \"true\").option(\"encoding\", \"SJIS\") \\\n",
     "    .csv(\"/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/dataset/jinko.csv\", header=False, sep=',', inferSchema=False,schema=struct)\n",
-    "df.show()"
+    "\n",
+    "data_t=df.filter(\"code!='都道府県コード'\")\n",
+    "\n",
+    "data_t.show()\n"
    ]
   },
   {
@@ -155,7 +158,8 @@
    "source": [
     "# 定義はMysqlに格納されています（次のセクションで確認を行います）\n",
     "spark.sql(\"\"\" \n",
-    "create database data_management_cruch_course;\n",
+    "create database if not exists data_management_cruch_course;\n",
+    "\n",
     "\"\"\")"
    ]
   },
@@ -169,7 +173,7 @@
     "# 今回はCSVに一致した「jinko_table」Sparkテーブルを作成します\n",
     "# 定義はMysqlに格納されています（次のセクションで確認を行います）\n",
     "spark.sql(\"\"\" \n",
-    "CREATE EXTERNAL TABLE IF NOT EXISTS data_management_cruch_course.jinko_table (code String, gengo String,wareki String,seireki String,chu String,sokei String,jinko_male String,jinko_femail String)\n",
+    "CREATE TABLE IF NOT EXISTS data_management_cruch_course.jinko_table (code String, gengo String,wareki String,seireki String,chu String,sokei String,jinko_male String,jinko_femail String)\n",
     "PARTITIONED BY (kenmei String)\n",
     "STORED AS PARQUET\n",
     "LOCATION '/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/dataset/parquet/';\n",
@@ -195,6 +199,51 @@
    "source": [
     "# テーブルの定義を確認することができます。\n",
     "spark.sql(\"show create table data_management_cruch_course.jinko_table\").show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# テーブルにデータを登録します\n",
+    "# insertIntoというメソッドがありますが使いづらいのでテンポラリテーブルを作成してそこからselect insert します\n",
+    "\n",
+    "data_t.createOrReplaceTempView(\"jinko_table_tmp\")\n",
+    "\n",
+    "#「データサイエンスのための前処理入門PythonとSparkで学ぶビッグデータエンジニアリング(PySpark) 速習講座」  \n",
+    "#https://www.udemy.com/course/python-spark-pyspark/?referralCode=E67BF8B61F65866794EB\n",
+    "#より、パーティションとリパーティションをつけることを忘れずに\n",
+    "spark.sql(\"\"\" \n",
+    "Insert into table data_management_cruch_course.jinko_table partition(kenmei)\n",
+    "/** REPARTITION(1) */\n",
+    "Select \n",
+    "code,gengo,wareki,seireki,chu,sokei,jinko_male,jinko_female,kenmei\n",
+    "from jinko_table_tmp\n",
+    "  \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# データがしっかり入っているか確認してみましょう\n",
+    "spark.sql(\"\"\"\n",
+    "select kenmei,count(*) from data_management_cruch_course.jinko_table group by kenmei\n",
+    "\"\"\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()\n",
+    "spark.sparkContext.stop()"
    ]
   }
  ],
